--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Loop Studios</title>
   </head>
   <body>
     <!-- Hero Section -->
     <section id="hero">
       <!-- Hero Container -->
-      <div class="container max-w-6xl mx-auto px-6 py-12 md:px-0">
+      <div class="container max-w-6xl mx-auto px-6 py-12">
         <!-- Menu/Logo Container -->
         <nav class="flex items-center justify-between font-bold text-white">
           <!-- Logo -->
@@ -57,6 +57,17 @@
           </div>
 
           <!-- Hamburger Button -->
+          <div class="md:hidden">
+            <button
+              id="menu-btn"
+              type="button"
+              class="z-40 block hamburger md:hidden focus:outline-none"
+            >
+              <span class="hamburger-top"></span>
+              <span class="hamburger-middle"></span>
+              <span class="hamburger-bottom"></span>
+            </button>
+          </div>
         </nav>
 
         <!-- Mobile Menu -->
